# static/swagger.json
@@ -1,109 +1,145 @@
 {
-    "swagger": "2.0",
-    "info": {
-      "title": "Library Management API",
-      "description": "API for managing a collection of books in a library",
-      "version": "1.0.0"
-    },
-    "basePath": "/",
-    "paths": {
-      "/books": {
-        "post": {
-          "summary": "Add a new book",
-          "parameters": [
-            {
-              "name": "body",
-              "in": "body",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/Book"
-              }
-            }
-          ],
-          "responses": {
-            "201": {
-              "description": "Book added successfully"
+  "swagger": "2.0",
+  "info": {
+    "version": "1.0.0",
+    "title": "Library Management API",
+    "description": "API for managing a collection of books in a library"
+  },
+  "host": "localhost:5000",
+  "basePath": "/",
+  "schemes": ["http"],
+  "paths": {
+    "/books": {
+      "post": {
+        "summary": "Add a new book",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Book"
             }
           }
-        },
-        "get": {
-          "summary": "List all books",
-          "responses": {
-            "200": {
-              "description": "A list of books",
-              "schema": {
-                "type": "array",
-                "items": {
-                  "$ref": "#/definitions/Book"
-                }
-              }
-            }
+        ],
+        "responses": {
+          "201": {
+            "description": "Book created"
           }
         }
       },
-      "/books/{isbn}": {
-        "put": {
-          "summary": "Update a book by ISBN",
-          "parameters": [
-            {
-              "name": "isbn",
-              "in": "path",
-              "required": true,
-              "type": "string"
-            },
-            {
-              "name": "body",
-              "in": "body",
-              "required": true,
-              "schema": {
+      "get": {
+        "summary": "List all books",
+        "responses": {
+          "200": {
+            "description": "A list of books",
+            "schema": {
+              "type": "array",
+              "items": {
                 "$ref": "#/definitions/Book"
               }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "Book updated successfully"
-            }
-          }
-        },
-        "delete": {
-          "summary": "Delete a book by ISBN",
-          "parameters": [
-            {
-              "name": "isbn",
-              "in": "path",
-              "required": true,
-              "type": "string"
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "Book deleted successfully"
             }
           }
         }
       }
     },
-    "definitions": {
-      "Book": {
-        "type": "object",
-        "properties": {
-          "title": {
+    "/books/search": {
+      "get": {
+        "summary": "Search for books",
+        "parameters": [
+          {
+            "name": "author",
+            "in": "query",
             "type": "string"
           },
-          "author": {
-            "type": "string"
-          },
-          "published_year": {
+          {
+            "name": "published_year",
+            "in": "query",
             "type": "integer"
           },
-          "isbn": {
+          {
+            "name": "genre",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of books",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Book"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/books/{isbn}": {
+      "delete": {
+        "summary": "Delete a book by ISBN",
+        "parameters": [
+          {
+            "name": "isbn",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Book deleted"
+          }
+        }
+      },
+      "put": {
+        "summary": "Update book details by ISBN",
+        "parameters": [
+          {
+            "name": "isbn",
+            "in": "path",
+            "required": true,
             "type": "string"
           },
-          "genre": {
-            "type": "string"
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Book"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Book updated"
           }
         }
       }
     }
+  },
+  "definitions": {
+    "Book": {
+      "type": "object",
+      "required": ["title", "author", "published_year", "isbn"],
+      "properties": {
+        "title": {
+          "type": "string"
+        },
+        "author": {
+          "type": "string"
+        },
+        "published_year": {
+          "type": "integer"
+        },
+        "isbn": {
+          "type": "string"
+        },
+        "genre": {
+          "type": "string"
+        }
+      }
+    }
   }
+}
